--- a/index.html
+++ b/index.html
@@ -304,13 +304,14 @@
     </div>
   </div>
 </a>
+
 <a href="https://kapulurubhuvaneswarivspdbct.github.io/Green-Gifts/">
   <div class="col">
     <div class="card">
       <img src="greebgifts.avif" class="card-img-top  bg-dark" height="300px" width="300px" alt="...">
       <div class="card-body">
-        <h5 class="card-title bg-secondary"><CENTER>GREEN-GIFTS</CENTER> </h5>
-        <p class="card-text">THIS IS A WEBSITE WHERE THE PEOPLE PLANT THE TREES AND GET GIFTS.</p>
+        <h5 class="card-title bg-secondary"><CENTER>FOREST PROMODORO</CENTER> </h5>
+        <p class="card-text">THIS IS A WEBSITE WHERE PLANTS ARE GROWN BY TASKS COMPLETED</p>
       </div>
     </div><BR><BR><BR>
   </div>
@@ -318,23 +319,34 @@
 <a href="https://kapulurubhuvaneswarivspdbct.github.io/B-Plaza-Offers-Baza/">
   <div class="col ">
     <div class="card">
-      <img src="bplaza.png" class="card-img-top  bg-dark"height="300px" width="300px" alt="...">
+      <img src="cal.png" class="card-img-top  bg-dark"height="300px" width="300px" alt="...">
       <div class="card-body">
-        <h5 class="card-title bg-secondary"><CENTER>BPLAZA</CENTER></h5>
-        <p class="card-text">THIS IS A WEBSITE WHERE DISCOUNTED ITEMS ARE DISPLAYED TO PURCHASE</p>
+        <h5 class="card-title bg-secondary"><CENTER>CHERRY SCIENTIFIC CALCULATOR</CENTER></h5>
+        <p class="card-text">THIS IS A WEBSITE USED FOR MATHEMATICAL CALCULATIONS</p>
       </div>
     </div>
   </div>
 </a>
 
+<a href="https://kapulurubhuvaneswarivspdbct.github.io/B-Plaza-Offers-Baza/">
+  <div class="col ">
+    <div class="card">
+      <img src="QUIZ.png" class="card-img-top  bg-dark"height="300px" width="300px" alt="...">
+      <div class="card-body">
+        <h5 class="card-title bg-secondary"><CENTER>B QUIZ GENERATOR</CENTER></h5>
+        <p class="card-text">THIS IS A WEBSITE USED TO GENERATE RANDOM QUIZES</p>
+      </div>
+    </div>
+  </div>
+</a>
 
   <a href="https://bhome.my.canva.site/">
   <div class="col">
     <div class="card">
-      <img src="bhouse.jpg" class="card-img-top bg-dark" height="300px" width="300px" alt="...">
+      <img src="STUDY.png" class="card-img-top bg-dark" height="300px" width="300px" alt="...">
       <div class="card-body">
-        <h5 class="card-title bg-secondary"><CENTER>B-HOME</CENTER></h5>
-        <p class="card-text">THIS IS A  RESTAURANT WEBSITE MAADE TO DISPLAY FACILITIES OF A HOTEL</p>
+        <h5 class="card-title bg-secondary"><CENTER>B-STUDY PLANNER</CENTER></h5>
+        <p class="card-text">THIS IS A WEBSITE USED TO PLAN TASKS BASED ON IMPORTANCE</p>
       </div>
     </div>
   </div>
