--- a/index.html
+++ b/index.html
@@ -283,6 +283,58 @@
 <div class="container">
   <h1 class="bg-info text-light"><center>PROJECTS</center></h1></div><br><br><br></div>
 <div class="row row-cols-1 row-cols-md-3 g-3">
+  <a href="
+  https://kapulurubhuvaneswarivspdbct.github.io/Forest-Promodoro1/
+  ">
+    <div class="col">
+      <div class="card">
+        <img src="greebgifts.avif" class="card-img-top  bg-dark" height="300px" width="300px" alt="...">
+        <div class="card-body">
+          <h5 class="card-title bg-secondary"><CENTER>FOREST PROMODORO</CENTER> </h5>
+          <p class="card-text">THIS IS A WEBSITE WHERE PLANTS ARE GROWN BY TASKS COMPLETED</p>
+        </div>
+      </div><BR><BR><BR>
+    </div>
+  </a>
+  
+  
+  
+  
+    <a href="https://kapulurubhuvaneswarivspdbct.github.io/b-study-planner/">
+    <div class="col">
+      <div class="card">
+        <img src="STUDY.png" class="card-img-top bg-dark" height="300px" width="300px" alt="...">
+        <div class="card-body">
+          <h5 class="card-title bg-secondary"><CENTER>B-STUDY PLANNER</CENTER></h5>
+          <p class="card-text">THIS IS A WEBSITE USED TO PLAN TASKS BASED ON IMPORTANCE</p>
+        </div>
+      </div>
+    </div>
+  </a>
+  
+  <a href="https://kapulurubhuvaneswarivspdbct.github.io/BQuiz/">
+    <div class="col ">
+      <div class="card">
+        <img src="QUIZ.png" class="card-img-top  bg-dark"height="300px" width="300px" alt="...">
+        <div class="card-body">
+          <h5 class="card-title bg-secondary"><CENTER>B QUIZ GENERATOR</CENTER></h5>
+          <p class="card-text">THIS IS A WEBSITE USED TO GENERATE RANDOM QUIZES</p>
+        </div>
+      </div>
+    </div>
+  </a>
+  <a href="https://kapulurubhuvaneswarivspdbct.github.io/Cherry-Notes/">
+    <div class="col ">
+      <div class="card">
+        <img src="cherry.png" class="card-img-top  bg-dark"height="300px" width="300px" alt="...">
+        <div class="card-body">
+          <h5 class="card-title bg-secondary"><CENTER>CHERRY NOTES</CENTER></h5>
+          <p class="card-text">THIS IS A WEBSITE USED TO CREATE DELETE AND SAVE NOTES</p>
+        </div>
+      </div>
+    </div>
+  </a>
+
   <a href="https://kapulurubhuvaneswarivspdbct.github.io/Helping-Bridge/"><div class="col">
     <div class="card">
       <img src="logoorg.png " class="card-img-top bg-dark"height="300px" width="300px" alt="...">
@@ -293,30 +345,7 @@
     </div>
   </div>
 </a>
-<a href="https://kapulurubhuvaneswarivspdbct.github.io/Cherry-Notes/">
-  <div class="col ">
-    <div class="card">
-      <img src="cherry.png" class="card-img-top  bg-dark"height="300px" width="300px" alt="...">
-      <div class="card-body">
-        <h5 class="card-title bg-secondary"><CENTER>CHERRY NOTES</CENTER></h5>
-        <p class="card-text">THIS IS A WEBSITE USED TO CREATE DELETE AND SAVE NOTES</p>
-      </div>
-    </div>
-  </div>
-</a>
-
-<a href="https://kapulurubhuvaneswarivspdbct.github.io/Green-Gifts/">
-  <div class="col">
-    <div class="card">
-      <img src="greebgifts.avif" class="card-img-top  bg-dark" height="300px" width="300px" alt="...">
-      <div class="card-body">
-        <h5 class="card-title bg-secondary"><CENTER>FOREST PROMODORO</CENTER> </h5>
-        <p class="card-text">THIS IS A WEBSITE WHERE PLANTS ARE GROWN BY TASKS COMPLETED</p>
-      </div>
-    </div><BR><BR><BR>
-  </div>
-</a>
-<a href="https://kapulurubhuvaneswarivspdbct.github.io/B-Plaza-Offers-Baza/">
+<a href="https://kapulurubhuvaneswarivspdbct.github.io/Cherry-calculator/">
   <div class="col ">
     <div class="card">
       <img src="cal.png" class="card-img-top  bg-dark"height="300px" width="300px" alt="...">
@@ -328,29 +357,7 @@
   </div>
 </a>
 
-<a href="https://kapulurubhuvaneswarivspdbct.github.io/B-Plaza-Offers-Baza/">
-  <div class="col ">
-    <div class="card">
-      <img src="QUIZ.png" class="card-img-top  bg-dark"height="300px" width="300px" alt="...">
-      <div class="card-body">
-        <h5 class="card-title bg-secondary"><CENTER>B QUIZ GENERATOR</CENTER></h5>
-        <p class="card-text">THIS IS A WEBSITE USED TO GENERATE RANDOM QUIZES</p>
-      </div>
-    </div>
-  </div>
-</a>
 
-  <a href="https://bhome.my.canva.site/">
-  <div class="col">
-    <div class="card">
-      <img src="STUDY.png" class="card-img-top bg-dark" height="300px" width="300px" alt="...">
-      <div class="card-body">
-        <h5 class="card-title bg-secondary"><CENTER>B-STUDY PLANNER</CENTER></h5>
-        <p class="card-text">THIS IS A WEBSITE USED TO PLAN TASKS BASED ON IMPORTANCE</p>
-      </div>
-    </div>
-  </div>
-</a>
 </div>
 <br/><br/><br/><br/><br/><br/>
 
@@ -360,6 +367,14 @@
 <div class="row row-cols-1 row-cols-md-2 g-4">
   <div class="col">
     <div class="card">
+      <img src="50days.png" class="card-img-top" alt="..." height=300px">
+      <div class="card-body">
+        <h5 class="card-title">LEETCODE 50 DAYS BADGE</h5>
+        <p class="card-text">EARNED 50 DAYS CODING BADGE AT</p>
+      </div>
+    </div>
+  </div><div class="col">
+    <div class="card">
       <img src="hacker.jpg" class="card-img-top" alt="..." height="300px">
       <div class="card-body">
         <h5 class="card-title">4 stars in c++</h5>
@@ -367,15 +382,7 @@
       </div>
     </div>
   </div>
-  <div class="col">
-    <div class="card">
-      <img src="iet.jpg" class="card-img-top" alt="..." height=300px">
-      <div class="card-body">
-        <h5 class="card-title">IET Scholorship</h5>
-        <p class="card-text">Qualified for Indian IET scholorship</p>
-      </div>
-    </div>
-  </div>
+  
   <div class="col">
     <div class="card">
       <img src="campus.jpg" class="card-img-top" alt="..." height="300px">
